initial engine module

--- a/app/assets/javascripts/fat_free_crm/application.js.erb
+++ b/app/assets/javascripts/fat_free_crm/application.js.erb
@@ -11,8 +11,8 @@
 //= require jquery-migrate
 //= require jquery_ujs
 //= require jquery-ui
-// TODO we should uncooment this
-// require select2-full
+// TODO this changed from select2-full to select2
+//= require select2
 //= require ./crm
 //= require ./crm_classes
 //= require ./crm_loginout
