--- a/app/assets/stylesheets/fat_free_crm/common.scss
+++ b/app/assets/stylesheets/fat_free_crm/common.scss
@@ -134,7 +134,7 @@ $sidebar_width: 210px;
   margin: 5px 0px 0px 0px; }
 
 .req, label.required {
-  background: image-url("asterisk.gif") no-repeat scroll center right transparent;
+  background: image-url("fat_free_crm/asterisk.gif") no-repeat scroll center right transparent;
   color: navy;
   display: inline-block; }
 
