--- a/app/views/fat_free_crm/accounts/_account.html.haml
+++ b/app/views/fat_free_crm/accounts/_account.html.haml
@@ -2,4 +2,4 @@
   = render(template, account: account)
 - else
   -# default view
-  = render 'accounts/index_brief', account: account
+  = render 'fat_free_crm/accounts/index_brief', account: account
