--- a/app/views/fat_free_crm/admin/fields/_field.html.haml
+++ b/app/views/fat_free_crm/admin/fields/_field.html.haml
@@ -1,6 +1,6 @@
 %li.highlight.position{class: field.class.name.underscore, id: dom_id(field)}
   %span.handle
-    = image_tag "sortable.gif"
+    = image_tag "fat_free_crm/sortable.gif"
 
   .tools
     %small
