--- a/app/views/fat_free_crm/campaigns/_index_brief.html.haml
+++ b/app/views/fat_free_crm/campaigns/_index_brief.html.haml
@@ -10,6 +10,6 @@
 
   .indent
     = link_to(campaign.name, campaign)
-    = render "campaigns/status", campaign: campaign
+    = render "fat_free_crm/campaigns/status", campaign: campaign
 
     = hook(:campaign_bottom, self, campaign: campaign)
