--- a/app/views/fat_free_crm/contacts/_contact.html.haml
+++ b/app/views/fat_free_crm/contacts/_contact.html.haml
@@ -2,4 +2,4 @@
   = render(template, contact: contact)
 - else
   -# default view
-  = render 'contacts/index_long', contact: contact
+  = render 'fat_free_crm/contacts/index_long', contact: contact
