--- a/app/views/fat_free_crm/contacts/_contacts.html.haml
+++ b/app/views/fat_free_crm/contacts/_contacts.html.haml
@@ -2,6 +2,6 @@
 = section(object, :contacts)
 .list#contacts
   - contacts = object.contacts.order('updated_at desc').paginate(page: 1, per_page: 20)
-  = render partial: "contacts/contact", collection: contacts
+  = render partial: "fat_free_crm/contacts/contact", collection: contacts
 
 = paginate( collection: contacts, id: 'contacts_pagination', params: { action: 'contacts' } )
