--- a/app/views/fat_free_crm/entities/_section_custom_fields.html.haml
+++ b/app/views/fat_free_crm/entities/_section_custom_fields.html.haml
@@ -8,4 +8,4 @@
         = section_title dom_id(field_group, entity_show), collapsed, field_group.label_i18n, t('show_tag_info_small', tag: field_group.label_i18n)
         .show_fields
           %div{ hidden_if(collapsed).merge(id: dom_id(field_group, entity_show)) }
-            = render "fields/group_view", fields: fields, entity: entity
+            = render "fat_free_crm/fields/group_view", fields: fields, entity: entity
