--- a/app/views/fat_free_crm/shared/_tags.html.haml
+++ b/app/views/fat_free_crm/shared/_tags.html.haml
@@ -3,4 +3,4 @@
   %td{ valign: :top, colspan: span }
     .label= t(:tags) + ":"
 
-    = f.select :tag_list, Tag.all.map{|t| t.name}, {}, {class: "select2_tag", data: {tags: true, url: url_for(action: 'field_group'), placeholder: t(:select_or_create_tags), multiple: true, asset_id: f.object.try(:id)}, multiple: true}
+    = f.select :tag_list, FatFreeCrm::Tag.all.map{|t| t.name}, {}, {class: "select2_tag", data: {tags: true, url: url_for(action: 'field_group'), placeholder: t(:select_or_create_tags), multiple: true, asset_id: f.object.try(:id)}, multiple: true}
