--- a/app/views/layouts/fat_free_crm/500.html.haml
+++ b/app/views/layouts/fat_free_crm/500.html.haml
@@ -6,8 +6,8 @@
   %head
     %meta{ "http-equiv" => "Content-Type", content: "text/html; charset=utf-8" }
     %title Fat Free CRM Exception
-    = stylesheet_link_tag :application
-    = javascript_include_tag :application
+    = stylesheet_link_tag 'fat_free_crm/application'
+    = javascript_include_tag 'fat_free_crm/application'
 
   %body
     #header
