--- a/app/views/layouts/fat_free_crm/application.html.haml
+++ b/app/views/layouts/fat_free_crm/application.html.haml
@@ -10,7 +10,7 @@
       #{yield :stylesheet_includes}
     %style= yield :styles
 
-    = javascript_include_tag :application
+    = javascript_include_tag 'fat_free_crm/application'
 
     - unless tabless_layout? || %w(en-US en-GB).include?(I18n.locale.to_s)
       = javascript_include_tag "vendor/jquery_ui_datepicker/jquery.ui.datepicker-#{I18n.locale}"
