--- a/app/views/fat_free_crm/accounts/show.html.haml
+++ b/app/views/fat_free_crm/accounts/show.html.haml
@@ -6,22 +6,22 @@
 
   = styles_for :task, :contact, :opportunity
 
-  = render 'accounts/title_bar', account: @account
-  = render 'accounts/sidebar_show', account: @account
+  = render 'fat_free_crm/accounts/title_bar', account: @account
+  = render 'fat_free_crm/accounts/sidebar_show', account: @account
 
   %div#edit_account{ hidden }
 
-  = render "comments/new", commentable: @account
+  = render "fat_free_crm/comments/new", commentable: @account
   = render partial: "fat_free_crm/shared/timeline", collection: @timeline
 
   = hook(:show_account_bottom, self, {entity: @account}) do
 
-    = render partial: "tasks/tasks", locals: {object: @account}
+    = render partial: "fat_free_crm/tasks/tasks", locals: {object: @account}
 
-    = render "contacts/contacts", object: @account
+    = render "fat_free_crm/contacts/contacts", object: @account
 
-    = render "opportunities/opportunities", object: @account
+    = render "fat_free_crm/opportunities/opportunities", object: @account
 
-    = render "versions/versions", object: @account
+    = render "fat_free_crm/versions/versions", object: @account
 
     = load_select_popups_for(@account, :tasks, :contacts, :opportunities)
