--- a/app/views/fat_free_crm/campaigns/_campaign.html.haml
+++ b/app/views/fat_free_crm/campaigns/_campaign.html.haml
@@ -2,4 +2,4 @@
   = render(template, campaign: campaign)
 - else
   -# default view
-  = render 'campaigns/index_brief', campaign: campaign
+  = render 'fat_free_crm/campaigns/index_brief', campaign: campaign
