--- a/app/views/fat_free_crm/contacts/_index_full.html.haml
+++ b/app/views/fat_free_crm/contacts/_index_full.html.haml
@@ -50,8 +50,8 @@
 
     %dt{ style: "padding: 2px 0px 0px 0px" }
       - if can?(:read, contact)
-        = render "contacts/section_general", contact: contact
-        = render "contacts/section_extra", contact: contact
+        = render "fat_free_crm/contacts/section_general", contact: contact
+        = render "fat_free_crm/contacts/section_extra", contact: contact
         = render "fat_free_crm/entities/section_custom_fields", entity: contact
-        = render "comments/new", commentable: contact
+        = render "fat_free_crm/comments/new", commentable: contact
       = render partial: "fat_free_crm/shared/timeline", collection: (contact.comments + contact.emails).sort { |x, y| y.created_at <=> x.created_at }
