--- a/app/views/fat_free_crm/contacts/show.html.haml
+++ b/app/views/fat_free_crm/contacts/show.html.haml
@@ -6,18 +6,18 @@
 
   = styles_for :task, :opportunity
   
-  = render 'contacts/title_bar', contact: @contact
-  = render 'contacts/sidebar_show', contact: @contact
+  = render 'fat_free_crm/contacts/title_bar', contact: @contact
+  = render 'fat_free_crm/contacts/sidebar_show', contact: @contact
 
-  = render "comments/new", commentable: @contact
+  = render "fat_free_crm/comments/new", commentable: @contact
   = render partial: "fat_free_crm/shared/timeline", collection: @timeline
 
   = hook(:show_contact_bottom, self, {entity: @contact}) do
 
-    = render partial: "tasks/tasks", locals: {object: @contact}
+    = render partial: "fat_free_crm/tasks/tasks", locals: {object: @contact}
 
-    = render partial: "opportunities/opportunities", locals: {object: @contact}
+    = render partial: "fat_free_crm/opportunities/opportunities", locals: {object: @contact}
     
-    = render partial: "versions/versions", locals: {object: @contact}
+    = render partial: "fat_free_crm/versions/versions", locals: {object: @contact}
 
     = load_select_popups_for(@contact, :tasks, :opportunities)
