--- a/app/views/fat_free_crm/entities/versions.js.haml
+++ b/app/views/fat_free_crm/entities/versions.js.haml
@@ -1,3 +1,3 @@
 - versions = Version.history(entity).paginate(page: params[:page], per_page: 20)
-$('#versions .list').html('#{ j(render partial: 'versions/version', collection: versions) }')
+$('#versions .list').html('#{ j(render partial: 'fat_free_crm/versions/version', collection: versions) }')
 $('#versions_pagination').html('#{ j paginate(collection: versions, container: false, params: { action: 'versions' } ) }')
