--- a/app/views/fat_free_crm/fields/_edit_custom_field_group.html.haml
+++ b/app/views/fat_free_crm/fields/_edit_custom_field_group.html.haml
@@ -5,4 +5,4 @@
   - f.object.field_groups.select{|fg| fg.name == 'custom_fields'}.each do |field_group|
     - if field_group.fields.present?
       - field_groups[field_group.tag.name.downcase] = "#{field_group.key}_container" if field_group.tag
-      = render partial: 'fields/group', locals: {f: f, field_group: field_group}
+      = render partial: 'fat_free_crm/fields/group', locals: {f: f, field_group: field_group}
