--- a/app/views/fat_free_crm/fields/_group_table.html.haml
+++ b/app/views/fat_free_crm/fields/_group_table.html.haml
@@ -4,7 +4,7 @@
       - group.each_with_index do |field, i|
         %td
           - if field.hint.present?
-            = image_tag "info_tiny.png", title: field.hint, class: "tooltip-icon"
+            = image_tag "fat_free_crm/info_tiny.png", title: field.hint, class: "tooltip-icon"
           - if field.as == 'check_boxes'
             - value = f.object.send(field.name)
             - checked = YAML.load(value.to_s)
