--- a/app/views/fat_free_crm/tasks/_edit.html.haml
+++ b/app/views/fat_free_crm/tasks/_edit.html.haml
@@ -5,8 +5,8 @@
     = hidden_field_tag "task[asset_id]", "#{@asset.id if @asset}"
     = hidden_field_tag "task[asset_type]", "#{@asset.class if @asset}"
 
-    = render "tasks/top_section",    f: f, edit: true
-    = render "fields/groups", f: f, edit: true
+    = render "fat_free_crm/tasks/top_section",    f: f, edit: true
+    = render "fat_free_crm/fields/groups", f: f, edit: true
 
     .buttonbar
       = f.submit t :save_task, class: 'btn btn-primary'
