--- a/app/views/fat_free_crm/entities/_permissions.html.haml
+++ b/app/views/fat_free_crm/entities/_permissions.html.haml
@@ -29,7 +29,7 @@
             %br
             = f.select :group_ids, group_options, {}, multiple: true, class: 'select2'
 
-    - if !edit and entity.is_a?(Lead)
+    - if !edit and entity.is_a?(FatFreeCrm::Lead)
       .radio_box
         = f.radio_button :access, t(:campaign), onclick: "$('#people').hide(); $('#lead_access_campaign').val('Campaign');", disabled: true
         %font{ id: :copy_permissions, color: :grey }
