--- a/app/views/fat_free_crm/admin/groups/_group.html.haml
+++ b/app/views/fat_free_crm/admin/groups/_group.html.haml
@@ -2,7 +2,7 @@
 
   %ul.tools
     %li= link_to_edit [:admin, group]
-    - count = Permission.where(group_id: group.id).count
+    - count = FatFreeCrm::Permission.where(group_id: group.id).count
     - confirm = (count.zero? ? nil : "#{t(:confirm_group_delete, count)}")
     %li= link_to_delete [:admin, group], confirm: confirm
 
