Import leads from excel

--- a/app/assets/stylesheets/fat_free_crm/common.scss
+++ b/app/assets/stylesheets/fat_free_crm/common.scss
@@ -784,3 +784,9 @@ table.asset_attributes {
     background-color: darkgray;
   }
 }
+
+.upload-excel {
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 5px;
+}
