--- a/app/views/fat_free_crm/leads/index.html.haml
+++ b/app/views/fat_free_crm/leads/index.html.haml
@@ -2,6 +2,10 @@
 
 = render 'fat_free_crm/entities/title_bar'
 
+= form_tag import_leads_path, multipart: true, class: "upload-excel" do
+  = file_field_tag :file
+  = submit_tag "Import"
+
 .remote#create_lead{ hidden }
 
 = render 'search'
