--- a/app/views/fat_free_crm/admin/field_groups/create.js.haml
+++ b/app/views/fat_free_crm/admin/field_groups/create.js.haml
@@ -1,4 +1,4 @@
-- asset = @field_group.klass_name.downcase
+- asset = @field_group.klass_name.downcase.demodulize
 - klass = @field_group.klass
 - id = "#{asset}_create_field_group"
 - container_id = "#{asset}_field_groups"
