--- a/app/views/fat_free_crm/admin/field_groups/new.js.haml
+++ b/app/views/fat_free_crm/admin/field_groups/new.js.haml
@@ -1,4 +1,4 @@
-- asset = @field_group.klass_name.downcase
+- asset = @field_group.klass_name.downcase.demodulize
 - id = "#{asset}_create_field_group"
 
 crm.flick('empty', 'toggle');
