--- a/app/views/fat_free_crm/admin/tags/_tag.html.haml
+++ b/app/views/fat_free_crm/admin/tags/_tag.html.haml
@@ -1,4 +1,4 @@
-- tag_field_groups = FieldGroup.where(tag_id: tag.id)
+- tag_field_groups = FatFreeCrm::FieldGroup.where(tag_id: tag.id)
 - model_tagging_counts = tag.model_tagging_counts
 
 %li.highlight[tag]
