--- a/app/views/fat_free_crm/admin/field_groups/_confirm.html.haml
+++ b/app/views/fat_free_crm/admin/field_groups/_confirm.html.haml
@@ -2,4 +2,4 @@
   #{t :field_group_confirm_delete}
   #{t :delete} <b>#{@field_group.name}</b>?
   = link_to_confirm_delete(@field_group) + " : "
-  = link_to_function(t(:no_button), "crm.flick('#{dom_id(@field_group, :confirm)}', 'remove')")
+  = link_to_function(t(:no_button), "crm.flick('#{dom_id(@field_group, :confirm_fat_free_crm)}', 'remove')")
