--- a/app/views/fat_free_crm/admin/field_groups/destroy.js.haml
+++ b/app/views/fat_free_crm/admin/field_groups/destroy.js.haml
@@ -1,4 +1,4 @@
-- id = dom_id(@field_group)
+- id = dom_id(@field_group, 'fat_free_crm')
 
 - if @field_group.destroyed?
   $('##{id}').css('background-color', '#ffe4e1').slideUp(250);
