--- a/app/views/fat_free_crm/admin/field_groups/update.js.haml
+++ b/app/views/fat_free_crm/admin/field_groups/update.js.haml
@@ -1,7 +1,7 @@
-- id = dom_id(@field_group, :edit)
+- id = dom_id(@field_group, :edit_fat_free_crm)
 
 - if @field_group.errors.empty?
   crm.flip_form('#{id}');
-  crm.set_title('#{dom_id(@field_group)}', '#{field_group_subtitle(@field_group)}');
+  crm.set_title('#{dom_id(@field_group, 'fat_free_crm')}', '#{field_group_subtitle(@field_group)}');
 - else
   $('##{id}').html('#{ j render(partial: 'edit') }');
