--- a/app/views/fat_free_crm/admin/fields/_field.html.haml
+++ b/app/views/fat_free_crm/admin/fields/_field.html.haml
@@ -1,4 +1,4 @@
-%li.highlight.position{class: field.class.name.underscore, id: dom_id(field)}
+%li.highlight.position{class: field.class.name.underscore, id: dom_id(field, 'fat_free_crm')}
   %span.handle
     = image_tag "fat_free_crm/sortable.gif"
 
