--- a/app/views/fat_free_crm/admin/fields/update.js.haml
+++ b/app/views/fat_free_crm/admin/fields/update.js.haml
@@ -1,4 +1,4 @@
-- id = dom_id(@field)
+- id = dom_id(@field, 'fat_free_crm')
 - container_id = "#{@field.klass_name.downcase}_field_groups"
 
 - if @field.errors.empty?
