--- a/app/views/fat_free_crm/admin/tags/_confirm.html.haml
+++ b/app/views/fat_free_crm/admin/tags/_confirm.html.haml
@@ -2,4 +2,4 @@
   #{t :tag_with_taggings_confirm_delete, value: Tagging.where(tag_id: @tag).count}
   #{t :delete} <b>#{@tag.name}</b>?
   = link_to_confirm_delete(@tag) + " : "
-  = link_to_function(t(:no_button), "crm.flick('#{dom_id(@tag, :confirm)}', 'remove')")
+  = link_to_function(t(:no_button), "crm.flick('#{dom_id(@tag, :confirm_fat_free_crm)}', 'remove')")
