--- a/app/views/fat_free_crm/admin/tags/create.js.haml
+++ b/app/views/fat_free_crm/admin/tags/create.js.haml
@@ -3,7 +3,7 @@
   $('#create_tag_title').html('#{ j t(:tags) }');
   $('#create_tag').slideUp(250);
   $('#tags').prepend('#{ j (render partial: "tag", collection: [ @tag ]) }');
-  $('##{dom_id(@tag)}').effect("highlight", { duration:1500 });
+  $('##{dom_id(@tag, 'fat_free_crm')}').effect("highlight", { duration:1500 });
   crm.flick('empty', 'remove');
 - else
   $('#create_tag').html('#{ j render(partial: 'new') }');
