--- a/app/views/fat_free_crm/tasks/uncomplete.js.haml
+++ b/app/views/fat_free_crm/tasks/uncomplete.js.haml
@@ -1,5 +1,5 @@
 - if @task.errors.empty?
-  $('##{dom_id(@task)}').slideUp(250);
+  $('##{dom_id(@task, 'fat_free_crm')}').slideUp(250);
 
   - if @empty_bucket
     $('#list_#{@empty_bucket}').fadeOut({ duration:500 });
