--- a/app/views/fat_free_crm/users/_user_report.html.haml
+++ b/app/views/fat_free_crm/users/_user_report.html.haml
@@ -1,4 +1,4 @@
-%li{id: dom_id(user_report)}
+%li{id: dom_id(user_report, 'fat_free_crm')}
   .title
     %span#title
       = user_report.full_name
