--- a/app/views/fat_free_crm/accounts/destroy.js.haml
+++ b/app/views/fat_free_crm/accounts/destroy.js.haml
@@ -1,6 +1,6 @@
 - entity_name = controller.controller_name.singularize.underscore
 - @entity = instance_variable_get("@#{entity_name}")
 
-$('##{dom_id(@entity)}').css('background-color', '#ffe4e1').slideUp(250);
+$('##{dom_id(@entity, 'fat_free_crm')}').css('background-color', '#ffe4e1').slideUp(250);
 = refresh_sidebar(:index)
 $('#paginate').replaceWith('#{ j render(partial: "fat_free_crm/shared/paginate_with_per_page") }');
