--- a/app/views/fat_free_crm/admin/field_groups/create.js.haml
+++ b/app/views/fat_free_crm/admin/field_groups/create.js.haml
@@ -7,7 +7,7 @@
   $('##{id}_arrow').html(crm.COLLAPSED);
   $('##{id}').slideUp( { duration:250, complete: function() {$(this).html('')} } );
   $('##{container_id}').after('#{ j(render partial: "field_group", collection: [ @field_group ]) }');
-  $('##{dom_id(@field_group)}').effect('highlight', { duration:1500 });
+  $('##{dom_id(@field_group, 'fat_free_crm')}').effect('highlight', { duration:1500 });
 
 - else
   $('##{id}').html('#{ j render(partial: "new") }');
