--- a/app/views/fat_free_crm/admin/field_groups/edit.js.haml
+++ b/app/views/fat_free_crm/admin/field_groups/edit.js.haml
@@ -1,5 +1,5 @@
-- id = dom_id(@field_group)
-- form_id = dom_id(@field_group, :edit)
+- id = dom_id(@field_group, 'fat_free_crm')
+- form_id = dom_id(@field_group, :edit_fat_free_crm)
 
 - if params[:cancel] == "true" # <----------------- Hide [Edit field_group]
 
