--- a/app/views/fat_free_crm/admin/fields/destroy.js.haml
+++ b/app/views/fat_free_crm/admin/fields/destroy.js.haml
@@ -1,4 +1,4 @@
-- id = dom_id(@field)
+- id = dom_id(@field, 'fat_free_crm')
 - if @field.destroyed?
   $('li##{id}').css('background-color', '#ffe4e1').slideUp(250);
 - else
