--- a/app/views/fat_free_crm/admin/groups/create.js.haml
+++ b/app/views/fat_free_crm/admin/groups/create.js.haml
@@ -3,7 +3,7 @@
   $('#create_group_title').html('#{ j t(:groups) }');
   $('#create_group').slideUp(250);
   $('#groups').prepend('#{ j (render partial: "group", collection: [ @group ]) }');
-  $('##{dom_id(@group)}').effect("highlight", { duration:1500 });
+  $('##{dom_id(@group, 'fat_free_crm')}').effect("highlight", { duration:1500 });
 - else
   $('#create_group').html('#{ j render(partial: "new") }');
   $('#group_name').focus();
