--- a/app/views/fat_free_crm/admin/groups/destroy.js.haml
+++ b/app/views/fat_free_crm/admin/groups/destroy.js.haml
@@ -1,8 +1,8 @@
-- id = dom_id(@group)
+- id = dom_id(@group, 'fat_free_crm')
 - if @group.destroyed?
   $('##{id}').css('background-color', '#ffe4e1').slideUp(250);
 - else
-  crm.flick("#{dom_id(@group, :confirm)}, 'remove')");
+  crm.flick("#{dom_id(@group, :confirm_fat_free_crm)}, 'remove')");
   $('#flash').html('#{ j flash[:warning] }');
   crm.flash('warning');
   - flash[:warning] = nil
