--- a/app/views/fat_free_crm/admin/groups/edit.js.haml
+++ b/app/views/fat_free_crm/admin/groups/edit.js.haml
@@ -1,4 +1,4 @@
-- id = dom_id(@group)
+- id = dom_id(@group, 'fat_free_crm')
 
 - if params[:cancel].true?     # <----------------- Hide [Edit Group]
   $('##{id}').replaceWith('#{ j (render(partial: "group", collection: [ @group ])) }');
