--- a/app/views/fat_free_crm/admin/tags/destroy.js.haml
+++ b/app/views/fat_free_crm/admin/tags/destroy.js.haml
@@ -1,4 +1,4 @@
-- id = dom_id(@tag)
+- id = dom_id(@tag, 'fat_free_crm')
 
 - if @tag.destroyed?
   $('##{id}').css('background-color', '#ffe4e1').slideUp(250);
