--- a/app/views/fat_free_crm/admin/tags/edit.js.haml
+++ b/app/views/fat_free_crm/admin/tags/edit.js.haml
@@ -1,4 +1,4 @@
-- id = dom_id(@tag)
+- id = dom_id(@tag, 'fat_free_crm')
 
 - if params[:cancel].true?     # <----------------- Hide [Edit Tag]
   $('##{id}').replaceWith('#{ j render(partial: "tag", collection: [ @tag ]) }');
@@ -7,7 +7,7 @@
 
   - if @previous                                    # Hide open [Edit Tag] form if any.
     - if @previous.is_a?(Tag)                       # Previous tag still exists?
-      $('##{dom_id(@previous)}').replaceWith('#{ j render(partial: "tag", collection: [ @previous ]) }');
+      $('##{dom_id(@previous, 'fat_free_crm')}').replaceWith('#{ j render(partial: "tag", collection: [ @previous ]) }');
     - else
       crm.flick('tag_#{@previous}', 'remove');
 
