--- a/app/views/fat_free_crm/admin/tags/update.js.haml
+++ b/app/views/fat_free_crm/admin/tags/update.js.haml
@@ -1,4 +1,4 @@
-- id = dom_id(@tag)
+- id = dom_id(@tag, 'fat_free_crm')
 
 - if @tag.errors.empty?
   $('##{id}').replaceWith('#{ j render(partial: "tag", collection: [ @tag ]) }');
