--- a/app/views/fat_free_crm/admin/users/create.js.haml
+++ b/app/views/fat_free_crm/admin/users/create.js.haml
@@ -3,7 +3,7 @@
   $('#create_user_title').html('#{t(:users)}');
   $('#create_user').slideUp(250);
   $('#users').prepend('#{ j (render partial: "user", collection: [ @user ]) }');
-  $('##{dom_id(@user)}').effect("highlight", { duration:1500 });
+  $('##{dom_id(@user, 'fat_free_crm')}').effect("highlight", { duration:1500 });
 - else
   $('#create_user').html('#{ j (render partial: "new") }');
   $('#group_username').focus();
