--- a/app/views/fat_free_crm/admin/users/suspend.js.haml
+++ b/app/views/fat_free_crm/admin/users/suspend.js.haml
@@ -1,3 +1,3 @@
-- id = dom_id(@user)
+- id = dom_id(@user, 'fat_free_crm')
 $('##{id}').replaceWith('#{ j render(partial: "user", collection: [ @user ]) }');
 $('##{id}').effect("highlight", { duration:1000 });
