--- a/app/views/fat_free_crm/admin/users/update.js.haml
+++ b/app/views/fat_free_crm/admin/users/update.js.haml
@@ -1,4 +1,4 @@
-- id = dom_id(@user)
+- id = dom_id(@user, 'fat_free_crm')
 
 - if @user.errors.empty?
   $('##{id}').replaceWith('#{ j render(partial: "user", collection: [ @user ]) }')
