--- a/app/views/fat_free_crm/emails/destroy.js.haml
+++ b/app/views/fat_free_crm/emails/destroy.js.haml
@@ -1,5 +1,5 @@
 - class_name = @email.mediator.class.name.downcase
-- id_prefix = "#{class_name}_#{@email.mediator.id}"
+- id_prefix = dom_id(@email.mediator, 'fat_free_crm')
 
 $('##{id_prefix}_shown_emails').val('#{ j @email.mediator.email_ids.join(',') }');
-$('##{dom_id(@email)}').css('background-color', '#ffe4e1').slideUp(250);
+$('##{dom_id(@email, 'fat_free_crm')}').css('background-color', '#ffe4e1').slideUp(250);
