--- a/app/views/fat_free_crm/entities/discard.js.haml
+++ b/app/views/fat_free_crm/entities/discard.js.haml
@@ -1,4 +1,4 @@
-$('##{dom_id(@attachment)}').slideUp(250);
+$('##{dom_id(@attachment, 'fat_free_crm')}').slideUp(250);
 
 - if called_from_landing_page?(:accounts)
   = refresh_sidebar_for(:accounts, :show)
