--- a/app/views/fat_free_crm/home/_task.html.haml
+++ b/app/views/fat_free_crm/home/_task.html.haml
@@ -4,7 +4,7 @@
   - else
     .strip.other #{t :other}
   .indent
-    %label{ id: dom_id(task, :name) }
+    %label{ id: dom_id(task, :name_fat_free_crm) }
       - if task.user.id != current_user.id
         = t(:task_from, link_to(h(task.user.full_name), user_path(task.user))).html_safe + ':'
       = link_to(task.name, tasks_path)
