--- a/app/views/fat_free_crm/leads/reject.js.haml
+++ b/app/views/fat_free_crm/leads/reject.js.haml
@@ -1,6 +1,6 @@
 - entity_name = controller.controller_name.singularize.underscore
 - @entity = instance_variable_get("@#{entity_name}")
-- id = dom_id(@entity)
+- id = dom_id(@entity, 'fat_free_crm')
 
 $('##{id}').replaceWith('#{ j render(partial: entity_name, collection: [ @entity ]) }');
 $('##{id}').effect("highlight", { duration:1500 });
