--- a/app/views/fat_free_crm/lists/destroy.js.haml
+++ b/app/views/fat_free_crm/lists/destroy.js.haml
@@ -1,1 +1,1 @@
-$('##{dom_id(@list)}').css('background-color', '#ffe4e1').slideUp();
+$('##{dom_id(@list, 'fat_free_crm')}').css('background-color', '#ffe4e1').slideUp();
