--- a/app/views/fat_free_crm/opportunities/destroy.js.haml
+++ b/app/views/fat_free_crm/opportunities/destroy.js.haml
@@ -1,7 +1,7 @@
 - entity_name = controller.controller_name.singularize.underscore
 - @entity = instance_variable_get("@#{entity_name}")
 
-$('##{dom_id(@entity)}').css('background-color', '#ffe4e1').slideUp(250);
+$('##{dom_id(@entity, 'fat_free_crm')}').css('background-color', '#ffe4e1').slideUp(250);
 - if called_from_index_page?
   = refresh_sidebar(:index)
   $('#paginate').html('#{ j render(partial: "fat_free_crm/shared/paginate_with_per_page") }');
