--- a/app/views/fat_free_crm/tasks/_pending.html.haml
+++ b/app/views/fat_free_crm/tasks/_pending.html.haml
@@ -9,10 +9,10 @@
     = link_to_discard(pending) + " | " if shown_on_landing_page?
     = link_to_task_delete(pending, bucket)
 
-  = check_box_tag dom_id(pending, :complete), 1, false, onclick: link_to_task_complete(pending, bucket)
+  = check_box_tag dom_id(pending, :complete_fat_free_crm), 1, false, onclick: link_to_task_complete(pending, bucket)
 
   .indentwide
-    %label{ id: dom_id(pending, :name) }
+    %label{ id: dom_id(pending, :name_fat_free_crm) }
       - if pending.user.id != current_user.id
         = t(:task_from, link_to(h(pending.user.full_name), user_path(pending.user))).html_safe + ':'
       = auto_link h(pending.name)
