--- a/app/views/fat_free_crm/tasks/destroy.js.haml
+++ b/app/views/fat_free_crm/tasks/destroy.js.haml
@@ -1,4 +1,4 @@
-$('##{dom_id(@task)}').slideUp(250);
+$('##{dom_id(@task, 'fat_free_crm')}').slideUp(250);
 
 - if @empty_bucket
   $('#list_#{@empty_bucket}').fadeOut({ duration:500 });
