--- a/app/views/fat_free_crm/entities/_rating_lead_search.html.erb
+++ b/app/views/fat_free_crm/entities/_rating_lead_search.html.erb
@@ -6,19 +6,19 @@
   <div class="tabs">
     <ul>
       <li>
-        <%= link_to t('5'), '#', :"data-search-form-filter-value" => "5", :"data-search-form-filter" => "rating", class: (params[:filter_by_value] == "5"  ? "" : " active") %>
+        <%= link_to t('5'), '#', :"data-search-form-filter-value" => "5", :"data-parent-search-form-filter" => "rating", :"data-parent-search-form" => "basic_search",class: (params[:filter_by_value] == "5"  ? "" : " active") %>
       </li>
       <li>
-        <%= link_to t('4'), '#',:"data-search-form-filter-value" => "4", :"data-search-form-filter" => "rating", class: (params[:filter_by_value] == "4"  ? "" : " active") %>
+        <%= link_to t('4'), '#',:"data-search-form-filter-value" => "4", :"data-parent-search-form-filter" => "rating", :"data-parent-search-form" => "basic_search",class: (params[:filter_by_value] == "4"  ? "" : " active") %>
       </li>
       <li>
-        <%= link_to t('3'), '#',  :"data-search-form-filter-value" => "3", :"data-search-form-filter" => "rating", class: (params[:filter_by_value] == "3"  ? "" : " active") %>
+        <%= link_to t('3'), '#',  :"data-search-form-filter-value" => "3", :"data-parent-search-form-filter" => "rating", :"data-parent-search-form" => "basic_search",class: (params[:filter_by_value] == "3"  ? "" : " active") %>
       </li>
       <li>
-        <%= link_to t('2'), '#',   :"data-search-form-filter-value" => "2", :"data-search-form-filter" => "rating", class: (params[:filter_by_value] == "2"  ? "" : " active") %>
+        <%= link_to t('2'), '#',   :"data-search-form-filter-value" => "2", :"data-parent-search-form-filter" => "rating", :"data-parent-search-form" => "basic_search",class: (params[:filter_by_value] == "2"  ? "" : " active") %>
       </li>
       <li>
-        <%= link_to t('1'), '#',   :"data-search-form-filter-value" => "1", :"data-search-form-filter" => "rating", class: (params[:filter_by_value] == "1"  ? "" : " active") %>
+        <%= link_to t('1'), '#',   :"data-search-form-filter-value" => "1", :"data-parent-search-form-filter" => "rating", :"data-parent-search-form" => "basic_search",class: (params[:filter_by_value] == "1"  ? "" : " active") %>
       </li>
     </ul>
   </div>
