Added email designs in campaigns

--- a/app/views/fat_free_crm/campaigns/_top_section.html.haml
+++ b/app/views/fat_free_crm/campaigns/_top_section.html.haml
@@ -26,4 +26,6 @@
 
       = render partial: "/fat_free_crm/shared/tags", locals: {f: f, span: 5}
 
+      = render partial: "/fat_free_crm/shared/designs", locals: {f: f, span: 5}
+
       = hook(:campaign_top_section_bottom, self, f: f)
