--- a/app/views/fat_free_crm/campaigns/_sidebar_show.html.haml
+++ b/app/views/fat_free_crm/campaigns/_sidebar_show.html.haml
@@ -79,6 +79,17 @@
       %dt= number_to_currency(@campaign.revenue, precision: 0) || t(:n_a)
       %tt== #{t :revenue}: #{performance(@campaign.revenue, @campaign.target_revenue)}
 
+  - if @campaign.email_designs.count
+    .caption #{t :campaign_stats}
+    - @campaign.email_designs.each do |email_design|
+      .email-design-stats
+        - if email_design.singlesend?
+          %a{:href => "https://mc.sendgrid.com/single-sends/#{email_design.source_info_id}/stats?view=raw"}
+            =email_design.source_info["name"]
+        - elsif email_design.automation?
+          %a{:href => "https://mc.sendgrid.com/automations/#{email_design.source_info_id}/detail?view=raw"}
+            =email_design.source_info["name"]
+
   - unless @campaign.background_info.blank?
     .caption #{t :background_info}
     = auto_link(simple_format @campaign.background_info)
